diesel_derives/src/tests/snapshots/diesel_derives__tests__querymodel_1.snap
---
source: diesel_derives/src/tests/mod.rs
expression: out
---
#[allow(unused_imports)]
#[allow(unused_qualifications)]
const _: () = {
    use diesel;
    impl<__DB: diesel::backend::Backend> QueryModel<__DB> for User {
        type BaseQuery = <users::table as diesel::query_builder::AsQuery>::Query;
        fn base_query() -> Self::BaseQuery {
            diesel::query_builder::AsQuery::as_query(users::table)
        }
    }
};
#[allow(unused_imports)]
#[allow(unused_qualifications)]
const _: () = {
    use diesel;
    use diesel::expression::Selectable;
    impl<__DB: diesel::backend::Backend> Selectable<__DB> for User {
        type SelectExpression = (users::r#id, users::r#name);
        fn construct_selection() -> Self::SelectExpression {
            (users::r#id, users::r#name)
        }
    }
};
#[allow(unused_imports)]
#[allow(unused_qualifications)]
const _: () = {
    use diesel;
    use diesel::row::{Field as _, Row as _};
    impl<__DB: diesel::backend::Backend, __ST0, __ST1>
        diesel::deserialize::Queryable<(__ST0, __ST1), __DB> for User
    where
        (i32, String): diesel::deserialize::FromStaticSqlRow<(__ST0, __ST1), __DB>,
    {
        type Row = (i32, String);
        fn build(row: (i32, String)) -> diesel::deserialize::Result<Self> {
            Ok(Self {
                id: std::convert::TryInto::try_into(row.0)?,
                name: std::convert::TryInto::try_into(row.1)?,
            })
        }
    }
};
