diesel_derives/src/tests/snapshots/diesel_derives__tests__selectable_column_name_1.snap
---
source: diesel_derives/src/tests/mod.rs
expression: out
info:
  input: "#[derive(Selectable)]\nstruct User {\n    id: i32,\n    #[diesel(column_name = username)]\n    name: String,\n}\n"
---
const _: () = {
    use diesel;
    use diesel::expression::Selectable;
    impl<__DB: diesel::backend::Backend> Selectable<__DB> for User {
        type SelectExpression = (users::r#id, users::r#username);
        fn construct_selection() -> Self::SelectExpression {
            (users::r#id, users::r#username)
        }
    }
};
