diesel_derives/src/tests/snapshots/diesel_derives__tests__selectable_embed_1.snap
---
source: diesel_derives/src/tests/mod.rs
expression: out
info:
  input: "#[derive(Selectable)]\nstruct User {\n    id: i32,\n    name: String,\n    #[diesel(embed)]\n    address: Address,\n}\n"
---
const _: () = {
    use diesel;
    use diesel::expression::Selectable;
    impl<__DB: diesel::backend::Backend> Selectable<__DB> for User
    where
        Address: Selectable<__DB>,
    {
        type SelectExpression = (
            users::r#id,
            users::r#name,
            <Address as Selectable<__DB>>::SelectExpression,
        );
        fn construct_selection() -> Self::SelectExpression {
            (
                users::r#id,
                users::r#name,
                <Address as Selectable<__DB>>::construct_selection(),
            )
        }
    }
};
