diesel_derives/src/tests/snapshots/diesel_derives__tests__selectable_select_expression_1.snap
---
source: diesel_derives/src/tests/mod.rs
expression: out
info:
  input: "#[derive(Selectable)]\nstruct User {\n    id: i32,\n    #[diesel(select_expression = users::columns::name.concat(\" test\"))]\n    #[diesel(select_expression_type = diesel::dsl::Concat<users::columns::name, &str>)]\n    name: String,\n}\n"
---
const _: () = {
    use diesel;
    use diesel::expression::Selectable;
    impl<__DB: diesel::backend::Backend> Selectable<__DB> for User {
        type SelectExpression = (
            users::r#id,
            diesel::dsl::Concat<users::columns::name, &str>,
        );
        fn construct_selection() -> Self::SelectExpression {
            (users::r#id, users::columns::name.concat(" test"))
        }
    }
};
