diesel_derives/src/tests/snapshots/diesel_derives__tests__sql_type_1 (mysql).snap
---
source: diesel_derives/src/tests/mod.rs
expression: out
info:
  input: "#[derive(SqlType)]\n#[diesel(mysql_type(name = \"Long\"))]\nstruct Integer;\n"
---
const _: () = {
    use ::diesel;
    impl diesel::sql_types::SqlType for Integer {
        type IsNull = diesel::sql_types::is_nullable::NotNull;
        const IS_ARRAY: bool = false;
    }
    impl diesel::sql_types::SingleValue for Integer {}
    impl diesel::sql_types::HasSqlType<Integer> for diesel::mysql::Mysql {
        fn metadata(_: &mut ()) -> diesel::mysql::MysqlType {
            diesel::mysql::MysqlType::Long
        }
    }
};
